--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CleanArcRazorDb;User Id=sa;Password=123456mM;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=CleanArcRazorDb;User Id=sa;Password=123456mM;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
